--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,6 +36,6 @@ jobs:
       - run: npm lint
       # Send a console message at completion.
       - run: |
-          echo "Hello ${{github.actor}}. You pushed to ${{github.repository}} at ${{date}}."
+          echo "Hello ${{github.actor}}. You pushed to ${{github.repository}} at $(date)."
 
 
