--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "main": "app.js",
     "scripts": {
         "start": "node app.js",
-        "test": "mocha test.js --testTimeout=100",
+        "test": "mocha test.js --exit",
         "lint": "eslint ."
     },
     "dependencies": {
