--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "devDependencies": {
         "chai": "^4.3.7",
         "chai-http": "^4.3.0",
-        "eslint": "^8.41.0",
+        "eslint": "^9.9.0",
+        "globals": "^15.9.0",
         "mocha": "^10.2.0",
         "supertest": "^6.3.3"
     }
